updated the prisma and the products cotroller

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -28,3 +28,9 @@ migrations
   "email": "johntest@example.com",
   "password": "johnny$yyY3"
 }
+
+{
+  "name": "John Doe",
+  "email": "johny@doe.com",
+  "password": "Johny@Doe1"
+}
