--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "build": "prisma migrate deploy && tsc"
+    "build": "prisma migrate deploy && tsc",
+    "postinstall": "prisma generate"
   },
   "repository": {
     "type": "git",
@@ -45,7 +46,8 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "prisma": "^5.21.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
