--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "build": "prisma migrate deploy && tsc",
+    "build": "prisma migrate deploy",
     "postinstall": "prisma generate"
   },
   "repository": {
