--- a/backend/package.json
+++ b/backend/package.json
@@ -35,12 +35,13 @@
   },
   "homepage": "https://github.com/cassandra18/lelann_bookshop#readme",
   "dependencies": {
-    "@prisma/client": "^5.16.1",
+    "@prisma/client": "^5.21.1",
     "bcrypt": "^5.1.1",
     "colors": "^1.4.0",
     "connect-pg-simple": "^9.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.18.2",
     "express-session": "^1.18.0",
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
