--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
   "homepage": "https://github.com/cassandra18/lelann_bookshop#readme",
   "dependencies": {
     "@prisma/client": "^5.21.1",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "colors": "^1.4.0",
     "connect-pg-simple": "^9.0.1",
