--- a/backend/package.json
+++ b/backend/package.json
@@ -35,7 +35,7 @@
   },
   "homepage": "https://github.com/cassandra18/lelann_bookshop#readme",
   "dependencies": {
-    "@prisma/client": "^5.21.1",
+    "@prisma/client": "^6.0.1",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "colors": "^1.4.0",
@@ -50,8 +50,7 @@
     "mongoose": "^8.8.4",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0",
-    "prisma": "^5.21.1"
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -65,6 +64,7 @@
     "@types/pg": "^8.11.6",
     "jest": "^29.7.0",
     "nodemon": "3.1.3",
+    "prisma": "^6.0.1",
     "sequelize-cli": "^6.6.2",
     "supertest": "^7.0.0"
   }
