--- a/backend/package.json
+++ b/backend/package.json
@@ -40,6 +40,7 @@
     "bcrypt": "^5.1.1",
     "colors": "^1.4.0",
     "connect-pg-simple": "^9.0.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
